# cerulean-lua

./: .gitignore  Cargo.toml  LICENCE  README.md
exec/: Cargo.toml
exec/src/: main.rs
gc/: Cargo.toml
gc/src/: arena.rs  heap.rs  index.rs  lib.rs  trace.rs  userdata.rs  vec_list.rs
gc/src/heap/: arena.rs  interned.rs  mod.rs  store.rs  userdata_store.rs
gc_derive/: Cargo.toml
gc_derive/src/: lib.rs
gc_derive/tests/ui/: 01_struct_unit.rs  02_struct_tuple.rs  03_struct_record.rs  04_enum.rs  05_enum_empty.rs  06_generic_consts.rs  07_generic_types copy.rs  08_where_clause copy.rs  09_inline_bound copy.rs  10_mixed_bound.rs  11_import_shadow.rs
interp/: Cargo.toml
interp/src/: main.rs
iterp/: Cargo.toml
literal/: Cargo.toml
literal/src/: lib.rs  number.rs  string.rs
lua_std/: Cargo.toml
lua_std/src/: ffi.rs  global_env.rs  impl_.rs  lib.rs  libs.rs  plugin.rs  std.rs  traits.rs
lua_std/src/ffi/: builtins.rs  math.rs  mod.rs  os.rs  string.rs  table.rs  utf8.rs
lua_std/src/lua_std/: impl_.rs
lua_std/src/std/: math.rs  mod.rs  os.rs  table.rs  utf8.rs
pack/: Cargo.toml
pack/src/: custom.rs  decoder.rs  encoder.rs  endian.rs  lex.rs  lib.rs
parser/: Cargo.toml
parser/src/: lex.rs  lib.rs  syntax_tests.rs
parser/src/codegen/: chunk.rs  const_.rs  const_table.rs  fragment.rs  func_table.rs  function.rs  jumps.rs  labels.rs  loop_stack.rs  mod.rs  pending_adjust.rs  reachability.rs  recipe_table.rs  stack.rs  upvalues.rs
parser/src/parser/: basic.rs  block.rs  error.rs  func_def.rs  mod.rs  prefix_expr.rs  prelude.rs  traits.rs
parser/src/parser/expr/: expr.rs  function.rs  literal.rs  mod.rs  table.rs  variadic.rs
parser/src/parser/stmt/: assignment.rs  break_.rs  decl_global_fn.rs  decl_local_fn.rs  decl_local_var.rs  do_end.rs  generic_for.rs  goto.rs  if_then.rs  label.rs  local_assignment.rs  local_function.rs  mod.rs  numerical_for.rs  repeat_until.rs  return_.rs  while_do.rs
parser/src/tracker/: const_.rs  function.rs  mod.rs  opcode.rs  stack.rs
parser/src/tracker2/: chunk.rs  const_.rs  fragment.rs  function.rs  stack.rs
parser/syntax_test_suite/: attributes.lua  comment.lua  expr_fn_call.lua  expr_fn_decl.lua  expr_op.lua  expr_table_decl.lua  expr_table_lookup.lua  expr_variadic.lua  literal_bool.lua  literal_numeric_decimal.lua  literal_numeric_hexadecimal.lua  literal_string.lua  stmt_assignment.lua  stmt_break.lua  stmt_do_end.lua  stmt_fn_call.lua  stmt_fn_decl.lua  stmt_generic_for.lua  stmt_goto.lua  stmt_if_then.lua  stmt_label.lua  stmt_local_assignment.lua  stmt_local_declaration.lua  stmt_local_fn_decl.lua  stmt_local_multiassignment.lua  stmt_multiassignment.lua  stmt_numeric_for.lua  stmt_repeat_until.lua  stmt_while_do.lua
parser_traits/: Cargo.toml
parser_traits/src/: combinator.rs  lib.rs  reason.rs  source.rs  traits.rs
repr/: Cargo.toml
repr/src/: chunk.rs  debug_info.rs  index.rs  index_vec.rs  lib.rs  literal.rs  opcode.rs  table.rs  value.rs
repr/src/debug_info/: mod.rs  opcode.rs
repr/src/index/: const_id.rs  function_id.rs  instr_id.rs  mod.rs  stack_slot.rs  upvalue_slot.rs
repr/src/value/: mod.rs  table.rs
rt/: Cargo.toml
rt/semantic_test_suite/: main.lua
rt/semantic_test_suite/lang/: func_call.lua  func_decl.lua  local_var.lua  variadic_expr.lua
rt/semantic_test_suite/lang/coercion/: to_bool.lua
rt/semantic_test_suite/lang/stmt/: break.lua  generic_for.lua  if_then.lua  numerical_for.lua  repeat_until.lua  while_do.lua
rt/semantic_test_suite/lang/value/: nil.lua
rt/semantic_test_suite/std/: assert.lua
rt/src/: backtrace.rs  chunk_builder.rs  chunk_cache.rs  convert.rs  error.rs  ffi.rs  gc.rs  global_env.rs  lib.rs  main.rs  plugin.rs  runtime.rs  value_builder.rs
rt/src/builtins/: coerce.rs  full.rs  mod.rs  raw.rs  raw_ops.rs  table.rs
rt/src/error/: already_dropped.rs  borrow.rs  closure.rs  diagnostic.rs  invalid_key.rs  missing_chunk.rs  missing_function.rs  mod.rs  not_callable.rs  not_text.rs  opcode.rs  out_of_bounds_stack.rs  signature.rs  thread.rs  upvalue_count_mismatch.rs  value.rs
rt/src/error/opcode/: bin_op.rs  invoke.rs  ip_out_of_bounds.rs  missing_args.rs  missing_const_id.rs  missing_recipe.rs  missing_stack_slot.rs  missing_upvalue_slot.rs  mod.rs  panic.rs  tab_get.rs  table.rs  una_op.rs
rt/src/ffi/: arg_adapter.rs  arg_parser.rs  coroutine.rs  delegate.rs  mod.rs  signature.rs  tuple.rs
rt/src/gc/: leaking.rs  mod.rs  rc.rs
rt/src/lua_std/: impl_.rs  mod.rs
rt/src/runtime/: closure.rs  dialect.rs  frame.rs  frame_stack.rs  interner.rs  mod.rs  orchestrator.rs  rust_backtrace_stack.rs  stack.rs  thread.rs  upvalue_stack.rs
rt/src/runtime/thread/: mod.rs  stack.rs  upvalue_register.rs
rt/src/runtime/thread/frame/: lua_bundle.rs  mod.rs  rust_bundle.rs
rt/src/runtime/thread/frame/lua_bundle/: mod.rs  upvalue_register.rs  variadic_register.rs
rt/src/value/: boolean.rs  callable.rs  float.rs  int.rs  mod.rs  nil.rs  ops.rs  string.rs  table.rs  traits.rs  userdata.rs
src/: index_vec.rs  lex.rs  lib.rs  main.rs  opcode.rs  parser.rs  runtime.rs  table.rs  value.rs
src/parser/: basic.rs  block.rs  expr.rs  func_def.rs  mod.rs  prefix_expr.rs  prelude.rs  stmt.rs  tracker.rs
src/parser/expr/: expr.rs  function.rs  literal.rs  mod.rs  prefix_expr.rs  table.rs
src/parser/stmt/: assignment.rs  generic_for.rs  if_then.rs  (+7 more)
src/parser2/: basic.rs  local_assignment.rs  mod.rs
src/tracker/: const_.rs  function.rs  mod.rs  opcode.rs  stack.rs
src/tracker2/: chunk.rs  const_.rs  fragment.rs  function.rs  mod.rs  stack.rs
virtual_fn/: Cargo.toml
virtual_fn/src/: lib.rs
(+4 files in other folders)
