[package]
name = "gc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
gc_derive = { version = "0.1.0", path = "../gc_derive" }
hashbrown = "0.15.1"
nonmax = "0.5.5"
typed-index-collections = "3.1.0"
