[package]
name = "lua_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
gc = { version = "0.1.0", path = "../gc" }
literal = { version = "0.1.0", path = "../literal" }
repr = { version = "0.1.0", path = "../repr" }
rt = { version = "0.1.0", path = "../rt" }
