[package]
name = "lua_std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "1.0.1"
codespan-reporting = "0.11.1"
cpu-time = "1.0.0"
gc = { version = "0.1.0", path = "../gc" }
literal = { version = "0.1.0", path = "../literal" }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"]}
rand_chacha = "0.3.1"
rand_hc = "0.3.2"
rand_xoshiro = "0.6.0"
repr = { version = "0.1.0", path = "../repr" }
rt = { version = "0.1.0", path = "../rt" }
