[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.11.1"
decorum = { version = "0.3.1", default-features = false }
either = "1.8.1"
lexical = { version = "6.1.1", default-features = false, features = ["parse", "parse-floats", "parse-integers", "format", "power-of-two"] }
logos = "0.13.0"
repr = { version = "0.1.0", path = "../repr" }
static_assertions = "1.1.0"
thiserror = "1.0.40"
