[package]
name = "rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
trace = ["tracing/max_level_trace"]

[dependencies]
anyhow = "1.0.70"
bitvec = "1.0.1"
clap = { version = "4.2.2", features = ["derive"] }
codespan-reporting = "0.11.1"
enumoid = "0.3.0"
gc = { version = "0.1.0", path = "../gc" }
logos = "0.13.0"
ordered-float = "4.1.1"
parser = { version = "0.1.0", path = "../parser" }
repr = { version = "0.1.0", path = "../repr" }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
