[package]
name = "rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
trace = ["tracing/max_level_trace"]

[dependencies]
bitvec = "1.0.1"
codespan-reporting = "0.11.1"
enumoid = "0.3.0"
gc = { version = "0.1.0", path = "../gc" }
hashbrown = "0.14.3"
logos = "0.13.0"
ordered-float = "4.1.1"
parser = { version = "0.1.0", path = "../parser" }
repr = { version = "0.1.0", path = "../repr" }
tracing = "0.1.37"
